@@ -421,4 +421,10 @@ public interface ERDesignerBundle {
   String COLLAPSEALL = "COLLAPSEALL";
   /** \u0047\u0072\u0069\u0064\u0020\u0073\u0069\u007a\u0065\u0020\u0061\u0066\u0074\u0065\u0072\u0020\u0072\u0065\u0076\u0065\u0072\u0073\u0065\u0020\u0065\u006e\u0067\u0069\u006e\u0065\u0065\u0072\u0069\u006e\u0067. */
   String GRIDSIZEAFTERREVERSEENGINEERING = "GRIDSIZEAFTERREVERSEENGINEERING";
+  /** \u0053\u0065\u006c\u0065\u0063\u0074\u0020\u0061\u006c\u006c. */
+  String SELECTALL = "SELECTALL";
+  /** \u0044\u0065\u0073\u0065\u006c\u0065\u0063\u0074\u0020\u0061\u006c\u006c. */
+  String DESELECTALL = "DESELECTALL";
+  /** \u0049\u006e\u0076\u0065\u0072\u0074\u0020\u0073\u0065\u006c\u0065\u0063\u0074\u0069\u006f\u006e. */
+  String INVERTSELECTION = "INVERTSELECTION";
 }
